--- a/fitnessguide/templates/users/result.html
+++ b/fitnessguide/templates/users/result.html
@@ -35,10 +35,11 @@
                 }
         
         #result_column{
-            position:inherit;
+            position:sticky;
             right: 0PX;
-            top: 40px;
+            top: 5px;
             min-height: fit-content;
+            
             
         }
         table tbody tr td{
