--- a/fitnessguide/templates/users/sedentary_lifestyle.html
+++ b/fitnessguide/templates/users/sedentary_lifestyle.html
@@ -42,12 +42,12 @@
                         <tr>
                             <td> 1 </td>
                             <td> Specify the average number of hours you sleep at night</td>   
-                            <td> <input type="number" name="sl1" id="sl1"></td>                                    
+                            <td> <input type="text" name="sl1" id="sl1"></td>                                    
                         </tr>  
                         <tr>
                             <td> 2 </td>
                             <td> Specify the average number of hours you nap in the day</td>   
-                            <td> <input type="number" name="sl2" id="sl2"></td>                                    
+                            <td> <input type="text" name="sl2" id="sl2"></td>                                    
                         </tr>
 
                         <tr>
@@ -58,27 +58,27 @@
                         <tr>
                             <td> 3 </td>
                             <td> Average number of hours spent sitting daily in the Office</td>   
-                            <td> <input type="number" name="sl3" id="sl3"></td>                                    
+                            <td> <input type="text" name="sl3" id="sl3"></td>                                    
                         </tr>  
                         <tr>
                             <td> 4 </td>
                             <td> Average number of hours spent sitting daily in the Car</td>   
-                            <td> <input type="number" name="sl4" id="sl4"></td>                                    
+                            <td> <input type="text" name="sl4" id="sl4"></td>                                    
                         </tr>
                         <tr>
                             <td> 5 </td>
                             <td> Average number of hours spent sitting daily while eating</td>   
-                            <td> <input type="number" name="sl5" id="sl5"></td>                                    
+                            <td> <input type="text" name="sl5" id="sl5"></td>                                    
                         </tr>
                          <tr>
                             <td> 6 </td>
                             <td> Average number of hours spent sitting daily while watching television</td>   
-                            <td> <input type="number" name="sl6" id="sl6"></td>                                    
+                            <td> <input type="text" name="sl6" id="sl6"></td>                                    
                         </tr>
                         <tr>
                             <td> 7 </td>
                             <td> Average number of hours spent sitting daily while reading/writing </td>   
-                            <td> <input type="number" name="sl7" id="sl7"></td>                                    
+                            <td> <input type="text" name="sl7" id="sl7"></td>                                    
                         </tr>
 
                         <tr>
@@ -89,27 +89,23 @@
                         <tr>
                             <td> 8 </td>
                             <td> Showering, Waiting, work at a counter, etc</td>   
-                            <td> <input type="number" name="sl8" id="sl8"></td>                                    
+                            <td> <input type="text" name="sl8" id="sl8"></td>                                    
                         </tr> 
                         <tr>
                             <td> 9 </td>
                             <td> Walking at 1-2 mph (relaxed rate)</td>   
-                            <td> <input type="number" name="sl9" id="sl9"></td>                                    
+                            <td> <input type="text" name="sl9" id="sl9"></td>                                    
                         </tr> 
                         <tr>
                             <td> 10 </td>
                             <td> Walking at 2-3 mph (quick)</td>   
-                            <td> <input type="number" name="sl10" id="sl10"></td>                                    
+                            <td> <input type="text" name="sl10" id="sl10"></td>                                    
                         </tr>
-                         <tr>
-                            <td> 10 </td>
-                            <td> Walking at 2-3 mph (quick)</td>   
-                            <td> <input type="number" name="sl10" id="sl10"></td>                                    
-                        </tr>
+                        
                         <tr>
                             <td> 11 </td>
                             <td> Walking at 3-4 mph (fast walk)</td>   
-                            <td> <input type="number" name="sl11" id="sl11"></td>                                    
+                            <td> <input type="text" name="sl11" id="sl11"></td>                                    
                         </tr>
 
                         <tr>
@@ -120,7 +116,7 @@
                         <tr>
                             <td> 12 </td>
                             <td> Sweeping, mopping, dusting, other light work</td>   
-                            <td> <input type="number" name="sl12" id="sl12"></td>                                    
+                            <td> <input type="text" name="sl12" id="sl12"></td>                                    
                         </tr> 
 
                         <tr>
@@ -131,7 +127,7 @@
                         <tr>
                             <td> 13 </td>
                             <td> Carpentry, electrical, painting. Etc </td>   
-                            <td> <input type="number" name="sl13" id="sl13"></td>                                    
+                            <td> <input type="text" name="sl13" id="sl13"></td>                                    
                         </tr> 
 
                         <tr>
@@ -142,7 +138,7 @@
                         <tr>
                             <td> 14 </td>
                             <td> Farming, lumberjacking, bricklaying. Etc</td>   
-                            <td> <input type="number" name="sl14" id="sl14"></td>                                    
+                            <td> <input type="text" name="sl14" id="sl14"></td>                                    
                         </tr>
                         
                         <tr>
@@ -153,7 +149,7 @@
                         <tr>
                             <td> 15 </td>
                             <td> Running, swimming, gymnastics, cycling, etc</td>   
-                            <td> <input type="number" name="sl15" id="sl15"></td>                                    
+                            <td> <input type="text" name="sl15" id="sl15"></td>                                    
                         </tr>
 
                         <tr>
@@ -164,7 +160,7 @@
                         <tr>
                             <td> 16 </td>
                             <td> Swimming, athletics, intense cycling, tennis etc</td>   
-                            <td> <input type="number" name="sl16" id="sl16"></td>                                    
+                            <td> <input type="text" name="sl16" id="sl16"></td>                                    
                         </tr>
 
                         <tr>
@@ -175,7 +171,7 @@
                         <tr>
                             <td> 17 </td>
                             <td> Soccer, basketball, handball etc</td>   
-                            <td> <input type="number" name="sl17" id="sl17"></td>                                    
+                            <td> <input type="text" name="sl17" id="sl17"></td>                                    
                         </tr>
               
                         
